# cachefly

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: benchmark.yml  ci.yml
benchmark/: README.md  matrix.sh  report.md  run.sh
benchmark/evidence/2026-07-15-centos8-4c67c5c/: README.md  asan-ubsan-status.txt  benchmark-summary.csv  concurrency-status.txt  environment.txt  integration-smoke-status.txt  release-status.txt  resource-limits-status.txt  test-summary.txt  tsan-status.txt  unit-status.txt
benchmark/evidence/2026-07-15-centos8-4c67c5c/benchmark-matrix/shards-1-pipeline-1/: environment.txt  redis-benchmark.csv
benchmark/evidence/2026-07-15-centos8-4c67c5c/benchmark-matrix/shards-1-pipeline-32/: environment.txt  redis-benchmark.csv
benchmark/evidence/2026-07-15-centos8-4c67c5c/benchmark-matrix/shards-1-pipeline-8/: environment.txt  redis-benchmark.csv
benchmark/evidence/2026-07-15-centos8-4c67c5c/benchmark-matrix/shards-2-pipeline-1/: environment.txt  redis-benchmark.csv
benchmark/evidence/2026-07-15-centos8-4c67c5c/benchmark-matrix/shards-2-pipeline-32/: environment.txt  redis-benchmark.csv
benchmark/evidence/2026-07-15-centos8-4c67c5c/benchmark-matrix/shards-2-pipeline-8/: environment.txt  redis-benchmark.csv
benchmark/evidence/2026-07-15-centos8-4c67c5c/benchmark-matrix/shards-4-pipeline-1/: environment.txt  redis-benchmark.csv
benchmark/evidence/2026-07-15-centos8-4c67c5c/benchmark-matrix/shards-4-pipeline-32/: environment.txt  redis-benchmark.csv
benchmark/evidence/2026-07-15-centos8-4c67c5c/benchmark-matrix/shards-4-pipeline-8/: environment.txt  redis-benchmark.csv
benchmark/evidence/2026-07-15-centos8-4c67c5c/benchmark-matrix/shards-8-pipeline-1/: environment.txt  redis-benchmark.csv
benchmark/evidence/2026-07-15-centos8-4c67c5c/benchmark-matrix/shards-8-pipeline-32/: environment.txt  redis-benchmark.csv
benchmark/evidence/2026-07-15-centos8-4c67c5c/benchmark-matrix/shards-8-pipeline-8/: environment.txt  redis-benchmark.csv
configs/: cachefly.conf
deploy/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: configuration.md  interview-guide.md  module-01-foundation.md  module-02-network.md  module-03-resp.md  module-04-commands.md  module-05-storage.md  module-06-sharding.md  module-07-eviction.md  module-08-persistence.md  module-09-observability.md  module-10-benchmark.md  module-11-delivery.md  operations.md  resume-hardening.md  resume.md
include/cachefly/base/: logger.h  noncopyable.h
include/cachefly/command/: async_dispatcher.h  command_executor.h  command_registry.h  database.h
include/cachefly/config/: config.h
include/cachefly/http/: admin_server.h
include/cachefly/metrics/: metrics.h
include/cachefly/net/: buffer.h  channel.h  event_loop.h  socket.h  tcp_connection.h  tcp_server.h
include/cachefly/persist/: aof.h  aof_impl.h  snapshot.h  snapshot_impl.h
include/cachefly/resp/: resp_parser.h  resp_value.h
include/cachefly/shard/: sharded_database.h
include/cachefly/storage/: kv_store.h
scripts/: build.sh  run.sh
src/: CMakeLists.txt  main.cpp
src/base/: logger.cpp
src/command/: async_dispatcher.cpp  command_executor.cpp  command_registry.cpp
src/config/: config.cpp
src/http/: admin_server.cpp
src/metrics/: metrics.cpp
src/net/: buffer.cpp  channel.cpp  event_loop.cpp  socket.cpp  tcp_connection.cpp  tcp_server.cpp
src/persist/: aof.cpp  snapshot.cpp
src/resp/: resp_parser.cpp  resp_value.cpp
src/shard/: sharded_database.cpp
src/storage/: kv_store.cpp
tests/: CMakeLists.txt  test_command.cpp  test_config.cpp  test_eviction.cpp  test_harness.h  test_logger.cpp  test_main.cpp  test_metrics.cpp  test_net.cpp  test_persist.cpp  test_resp.cpp  test_shard.cpp  test_storage.cpp
tests/integration/: concurrency.sh  resource_limits.sh  smoke.sh
